=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.09-dev

c-modules build errors are no longer ignored [Stas]

change -DAPACHE1 (and like defines) to -D APACHE1 to fix Win32
compatibility issues [Steve Hay]

fix the custom config use for Apache-Test's own upgrades [Stas]

=item 1.08 - February 24, 2004

Instead of hard-coding listen directive to 127.0.0.1, use the server
name. [Gozer]

added -defines configuration option, providing a way to pass additional
-D names to the server for use in <IfDefine> blocks.  [Geoffrey Young]

Make it possible to run TEST (or another driving script) from any path
(e.g. t/TEST, ./TEST, /full/path/to/t/TEST) [Stas]

If at least one *conf*.in files is modified since the last
configuration, make sure to regenerate them all, so the right ports
will be assigned. [Stas]

Make sure that Apache-Test modules are installed into INSTALLSITEARCH
during a standalone build. Because EU::MM does so when A-T is bundled
with mp2, and we want to avoid having A-T installed in two different
places under @INC. [Stas]

HTTP/0.9 responses no longer croak, provided $ENV{APACHE_TEST_HTTP_09_OK} 
is true.  [Geoffrey Young]

Hard-code listen directive to 127.0.0.1, solving problems for people
with IPv4 & IPv6 address until a better solution is found. [Gozer]

prefix Apache::TestTrace (non-colour mode) messages with the loglevel,
similar to what Apache does. [Stas]

Instrument A-T with an optional successful (shell-wise) abort of the
test suite, by asking the user whether they want to continue w/o
completing the test suite. Use it in places where we know that the
test suite will certaionly fail (e.g. running from /root as 'root', or
not providing httpd/apxs locations). [Stas]

In order to make Apache-Test compatible with the rest of Perl testing
frameworks, we no longer chdir into t/, but run from the root of the
project (where t/ resides). A test needing to know where it's running